codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__unified_mentions_render__tests__unified_mentions_filesystem_only_mode.snap
---
source: tui/src/bottom_pane/unified_mentions_render.rs
expression: "render_popup_text(\"@goog\", &rows, state, 86, SearchMode::FilesystemOnly)"
---
› @goog

  calendar.rs  src/google/                                                      File
  google       src/                                                             Dir







  enter insert · esc close · ←/→ switch s…  All Results   [Filesystem Only]   Plugins
