codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__unified_mentions_render__tests__unified_mentions_mixed_results.snap
---
source: tui/src/bottom_pane/unified_mentions_render.rs
expression: "render_popup_text(\"@goog\", &rows, state, 86, SearchMode::Results)"
---
› @goog

  Google Calendar  Connect calendars and event management                       Plugin
  Google Calendar  Find availability and plan event changes                     Skill
  calendar.rs      src/google/                                                  File
  google           src/                                                         Dir





  enter insert · esc close · ←/→ switch s… [All Results]   Filesystem Only    Plugins
