codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__unified_mentions_render__tests__unified_mentions_tools_mode_duplicate_display_names.snap
---
source: tui/src/bottom_pane/unified_mentions_render.rs
expression: "render_popup_text(\"@goog\", &rows, state, 86, SearchMode::Tools)"
---
› @goog

  Google Calendar  Connect calendars and event management                       Plugin
  Google Calendar  Find availability and plan event changes                     Skill







  enter/tab insert · esc close · ←/→ swit…  All Results    Filesystem Only   [Plugins]
